Prepare using in Spark.